@@ -3,6 +3,11 @@
   Please log (major) changes here (and add a short comment using bzr commit -m 'Comment').
   
   
+  268: sluys, 27/11/2011
+    - Added FindLibs for LAL, LALMetaio
+      - explicitly link against these libraries
+    - Added compile flags for clang, icc
+    
   267: sluys, 26/11/2011
     - Removed compile flags for libraries
     - Updated copyright
